# stream-society

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analytics/: report.py
bridges/: base.py  mmdagent_bridge.py  mock_bridge.py
cli/: main.py
configs/: streamer.yaml
configs/experiments/: demo_compare.yaml  demo_random.yaml
data/personas/: aituber_sample.jsonl  sample_personas.jsonl
docs/: contextual_bandit_todo.md
ingestion/: aituber_ingestion.py  persona_ingestion.py
simulator/: metrics.py  persona.py  schemas.py  simulation.py  streamer.py  viewer.py
simulator/adapters/: base.py  mock_adapter.py  vllm_adapter.py
simulator/policy/: base.py  contextual_bandit_stub.py  factory.py  random_policy.py  rule_based.py  score_based.py
tests/: test_aituber_ingestion.py  test_persona.py  test_policy.py  test_simulation.py  test_viewer.py  test_web.py
web/: app.py
web/static/css/: main.css
web/static/js/: compare.js  main.js  run_viewer.js
web/templates/: base.html  compare.html  index.html  persona_detail.html  personas.html  run_viewer.html
