[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stream-society"
version = "0.1.0"
description = "AI Livestream Simulation Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "polars>=0.19.0",
    "pyarrow>=13.0.0",
    "sqlite-utils>=3.35",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
ss = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I"]
